# assignment

./: main.py  pyproject.toml  자가평가.md
alembic/: env.py
alembic/versions/: 1489d3b54c75_.py  58d7990950b5_create_daily_ticker_table.py  83ba220ee4fd_create_daily_ticker_table.py  f90a2882c78b_.py
stocks/: main.py
stocks/api/routes/: daily_ticker.py  rebalancing.py
stocks/core/: config.py  database.py  middleware.py
stocks/infra/crud/: rebalancing.py  ticker.py
stocks/infra/database/: daily_ticker.py  rebalancing.py
stocks/jobs/: fetch_stock_data.py  import_csv.py  rebalancing.py
stocks/models/: __init__.py  base.py  daily_ticker.py  rebalancing.py
stocks/schemas/: daily_ticker.py  rebalancing.py  standard.py
stocks/services/: daily_ticker.py  fetch_stock_data.py  rebalancing.py  response_deco.py
utils/: calculator.py  constant.py
