[project]
name = "assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "beckham",email = "octpiano@naver.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "fastapi (>=0.115.11,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
