[tool.poetry]
name = "assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <your@email.com>"]
packages = [{include = "stocks"}]  # 패키지 포함

[tool.poetry.dependencies]
python = "^3.12"
dotenv = "^0.9.9"
sqlalchemy = "^2.0.38"
fastapi = "^0.115.11"
requests = "^2.32.3"
bs4 = "^0.0.2"
psycopg2 = "^2.9.10"
yfinance = "^0.2.54"
